--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -49,4 +49,9 @@
         android:icon="@drawable/ic_google_play_vector"
         android:title="@string/more_fossify_apps"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/open_recordings"
+        android:icon="@drawable/ic_play_vector"
+        android:title="@string/recordings"
+        app:showAsAction="never" />
 </menu>
